--- a/engine/pre-alpha/14/index.html
+++ b/engine/pre-alpha/14/index.html
@@ -904,7 +904,7 @@
 						interval = setTimeout(function(){
 
 							var value = entitySelect.value;
-							if ( !checkId( value ) return editor.reset(); 
+							if ( !checkId( value ) ) return editor.reset(); 
 
 							var id = parseInt( entitySelect.value );
 							var object = getObjectByEntityId( id );
