--- a/engine/pre-alpha/15/index.html
+++ b/engine/pre-alpha/15/index.html
@@ -300,7 +300,7 @@
 				var material = new THREE.MeshLambertMaterial();
 				var sphere = new THREE.Mesh(geometry, material);
 				sphere.name = "local player sphere";
-				cube.add( sphere );
+			//	cube.add( sphere );
 				localPlayer.add( cube );
 			})();
 
@@ -344,7 +344,7 @@
 
 				(function(){
 					var w = 12, h = 10;
-					var x = 5, y = h/2, z = -11;
+					var x = 15, y = h/2, z = -11;
 					var box = new THREE.BoxGeometry(w,h,w);
 					box.translate(0, h/2, 0);
 					var mesh = new THREE.Mesh(box, material);
