--- a/engine/editor/demo.html
+++ b/engine/editor/demo.html
@@ -127,7 +127,7 @@
 				var materialTab = TabUI.add( "Materials", "material-tab" );
 				var animationTab = TabUI.add( "Animations", "animation-tab" );
 
-				TabUI.append("Editor", "Controls", "Camera", "Players", "Animations", "Materials", "Levels", "Debug" );
+				TabUI.append( "Editor" );
 				TabUI.Editor.role.classList.add("active");
 				TabUI.Editor.tab.classList.add("in","active");
 
